clusters/firefly/apps/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/entrypoints: websecure
  labels:
    app: radarr
spec:
  rules:
    - host: radarr.sargeant.co # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-service
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.sargeant.co # Replace with your domain
      secretName: radarr-tls # Secret for TLS certificate
